--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".MenuOpciones"
+            android:theme="@style/Theme.AppCompat"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
