--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Landing"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat"/>
+        <activity
             android:name=".MenuOpciones"
-            android:theme="@style/Theme.AppCompat"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -27,7 +31,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
