--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,15 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".OpcionesPostres"
+            android:exported="false" />
+        <activity
+            android:name=".Postres"
+            android:exported="false" />
+        <activity
             android:name=".Landing"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat"/>
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".MenuOpciones"
             android:exported="true"
