--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,22 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".CarritoCompras"
+            android:exported="true"
+            android:label="@string/title_activity_carrito_compras"
+            android:theme="@style/Theme.MyApplication" />
+        <activity
             android:name=".OpcionesPostres"
-            android:exported="false" />
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat" />
         <activity
             android:name=".Postres"
-            android:exported="false" />
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat"/>
         <activity
             android:name=".Landing"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat" />
+            android:theme="@style/Theme.MyApplication" />
         <activity
             android:name=".MenuOpciones"
             android:exported="true"
